[package]
authors = ["poly000"]
license = "MIT"
name = "petpet-gui"
version = "1.0.0"
edition = "2021"
description = "GUI interface of petpet-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nfd2 = "0.3.0"
petpet = { version = "2.3.2", features = ["more_format", "image"] }

[profile.release]
opt-level = "z"
