[package]
authors = ["poly000"]
license = "MIT"
name = "petpet-gui"
version = "1.1.0"
edition = "2021"
description = "GUI interface of petpet-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.13"
petpet = { version = "2.4.1", features = ["more_format", "image"] }

[profile.release]
opt-level = "z"
